--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: esantos-app-services
+  name: django-app-services
 spec:
   selector:
-    app: esantos-app
+    app: django-app
   ports:
   - port: 8000
     targetPort: 8000
