secrets.yaml update

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,4 +4,7 @@ metadata:
   name: django-app-secret
 type: Opaque
 data:
-  password: cG9zdGdyZXNxbDovL3Bvc3RncmVzOmVzYW50b3MtYXBwQGxvY2FsaG9zdC9wb3N0Z3Jlcwo=
+  DB_STRING: cG9zdGdyZXNxbDovL3Bvc3RncmVzOmVzYW50b3MtYXBwQGxvY2FsaG9zdC9wb3N0Z3Jlcwo=
+  DJANGO_SUPERUSER_EMAIL: bG9jYWxhZG1pbkBkamFuZ29hcHAuY29t
+  DJANGO_SUPERUSER_USERNAME: YWRtaW4=
+  DJANGO_SUPERUSER_PASSWORD: VDJARGp2RjI/XzIyRF5oXks2VzJLYw==
