namespace tag update

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: django-app-ingress
   labels:
     name: django-app-ingress
+  namespace: dev
 spec:
   rules:
   - host: localhost
