--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: django-app-secret
+  namespace: dev
 type: Opaque
 data:
   DB_STRING: cG9zdGdyZXNxbDovL3Bvc3RncmVzOmVzYW50b3MtYXBwQGxvY2FsaG9zdC9wb3N0Z3Jlcwo=
