--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,12 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: django-app-delp
+  labels:
+    app: django-app
+  name: django-app
+  namespace: dev
 spec:
   replicas: 3
   selector:
     matchLabels:
       app: django-app
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 2
   template:
     metadata:
       labels:
@@ -24,4 +32,23 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 8000
-
+        livenessProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        startupProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          tcpSocket:
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 5
+          failureThreshold: 5
