--- a/k8s/hpa.yaml
+++ b/k8s/hpa.yaml
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: django-app-hpa
+  namespace: dev
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
